--- a/css/skeleton.css
+++ b/css/skeleton.css
@@ -21,14 +21,9 @@
 /* Grid
 –––––––––––––––––––––––––––––––––––––––––––––––––– */
 /*my own css */
-.place{
-	height: auto;
-	margin-left: 20px;
-	padding: 10px 0;
-	float: left;
-	width:30%;
+.row text{
+	text-align: center;
 }
-
 body{
 	color: white;
 	background:
@@ -45,38 +40,7 @@ background-color: #840b2a;
 table{
 	width: 100%;
 }
-@media (max-width: 500px) {
-  .myName {
-    font-size: 50px;
-    text-align: center;
-    padding: 30px 0;
-  }
-  .sixText, .cityText, .mtext{
-    font-size: 12px;
-  }
-}
-.sixText, .cityText, .mtext{
-  font-size: 9px;
-}
-.myName {
-  font-size: 50px;
-  text-align: center;
-  padding: 100px 0;
-}
-.cityName{
-  font-size: 13px;
-  padding: 40px 0
-}
-
-.cityName{
-  text-align:center;
-  text-align: justify;
-  text-justify: inter-word;
-}
-.banelePic{
-  padding: 50px 0;
-  text-align: center;
-}
+@media (min-width: 500px) {
 .container {
   position: relative;
   width: 100%;
@@ -95,8 +59,6 @@ table{
   .container {
     width: 85%;
     padding: 0; }
-  .sixText, .cityText, .mtext{
-      font-size: 15px;}
 
 }
 
